--- a/data/pages/privacy.mdx
+++ b/data/pages/privacy.mdx
@@ -5,7 +5,7 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Open Sats Initiative&#39;s core purpose is to foster an ecosystem that supports the collaborative and public development of free and open-source software projects (each, a "Project"). This privacy policy ("Privacy Policy") describes our policies and procedures about the collection, use, disclosure and sharing, or other processing of your personal information when you use our websites (e.g., opensats.org) or participate in or use our project sites (collectively, the "Sites"), as well as when you interact with or participate in our educations and training programs and events. (collectively, the "Services"). This Privacy Policy applies to activities by Open Sats Initiative and its affiliates, subsidiaries and related entities (collectively "Open Sats" "we" or "us"), including activities that we perform for other entities through third party agreements.
+Open Sats Initiative's core purpose is to foster an ecosystem that supports the collaborative and public development of free and open-source software projects (each, a "Project"). This privacy policy ("Privacy Policy") describes our policies and procedures about the collection, use, disclosure and sharing, or other processing of your personal information when you use our websites (e.g., opensats.org) or participate in or use our project sites (collectively, the "Sites"), as well as when you interact with or participate in our educations and training programs and events. (collectively, the "Services"). This Privacy Policy applies to activities by Open Sats Initiative and its affiliates, subsidiaries and related entities (collectively "Open Sats" "we" or "us"), including activities that we perform for other entities through third party agreements.
 
 For purposes of the General Data Protection Regulation ("GDPR"), Open Sats is the controller of your personal information. Where processing of personal information is undertaken by our affiliates, subsidiaries and related entities, they are a joint controller with Open Sats Initiative for your personal information.
 
@@ -21,7 +21,7 @@ _Account and Profile Information._ Users may sign up for, request, or order our 
 
 _Donations._ To register for and participate in the Open Sats Projects and related Services, users must have an active login ID and account (see above for information collected related to account registration). Open Sats may collect the following information related to financial contributions and :Depending on the Open Sats Services in which users participate, we may also collect additional information relating to their use of those Services, including:
 
-- _Donations_: We collect information about financial contributions made, as well as and funds received through the Sites. Open Sats generally only records the result of the transaction and any references to the transaction record provided by the third-party site. For example, when users make financial contributions to projects, we collect and process the donation amount, allocation to certain projects, and identifiers used to associate that donation with the donor and project in the project&#39;s open and transparent public ledger (unless otherwise agreed to by the donor and Open Sats. We also collect disbursement amount and category, recipient name and email, and identifiers related to disbursements of project funds for projects. Further, we use third-party services including Stripe to facilitate funding and disbursements. If applicable, the third-party site may collect payment information directly to facilitate a transaction.
+- _Donations_: We collect information about financial contributions made, as well as and funds received through the Sites. Open Sats generally only records the result of the transaction and any references to the transaction record provided by the third-party site. For example, when users make financial contributions to projects, we collect and process the donation amount, allocation to certain projects, and identifiers used to associate that donation with the donor and project in the project's open and transparent public ledger (unless otherwise agreed to by the donor and Open Sats. We also collect disbursement amount and category, recipient name and email, and identifiers related to disbursements of project funds for projects. Further, we use third-party services including Stripe to facilitate funding and disbursements. If applicable, the third-party site may collect payment information directly to facilitate a transaction.
 
 _Events Registration._ When you register for an Open Sats event (training, conference, or other event) to participate as an attendee, a speaker or a sponsor, we collect personal information that includes name, company, contact information, and other information. We may also collect other optional personal information such as likes, interests, preferred pronoun, dietary restriction, size preferences for conference attire gifts and other background information. In addition, if you provide it, we may collect (1) personal information about disabilities, medical conditions and allergies in order to provide appropriate accommodations for attendees, and (2) personal information about your citizenship, date of birth, and passport details if you request assistance from us with obtaining a visa letter to travel to one of our events.
 
@@ -35,7 +35,7 @@ _Registration for Projects._ You can register to receive access to various infor
 
 _Project Integrity and Credit for Attribution_. When you contribute source code, documentation or other content to one of our Projects (whether on your own behalf or through a third party entity), we collect and store the information and content that you contribute. This includes the contents of those contributions, as well as information required to confirm the provenance of intellectual property contained in those contributions, and personal information that you make publicly available in the record of the contribution pursuant to sign-offs under the a Certificate of Origin as Follows:
 
-_Developer&#39;s Certificate of Origin:_
+_Developer's Certificate of Origin:_
 
 By making a contribution to this project, I certify that:
 
@@ -57,16 +57,16 @@ _Communications_. When you communicate with us (via email, phone, through the Si
 
 _Payment Information._ To participate in or purchase Services (including registering for events, training and certification exams), users may be asked to be directed to a third-party site, such as Stripe, to pay for their purchases. If applicable, the third-party site may collect payment information directly to facilitate a transaction. Open Sats generally only records the result of the transaction and any references to the transaction record provided by the third-party site.
 
-_Automatically Collected Information._ In addition, Open Sats may automatically collect the following information about users&#39; use of the Sites or Services through cookies, web beacons, and other technologies: your domain name; your browser type and operating system; web pages you view; when you open certain emails we send; links you click; your IP address; your country of location; the length of time you visit our Sites and or use our Services; and the referring URL, or the webpage that led you to our Sites. We may combine this information with other information that we have collected about you, including, where applicable, your user name, name, and other personal information.
+_Automatically Collected Information._ In addition, Open Sats may automatically collect the following information about users' use of the Sites or Services through cookies, web beacons, and other technologies: your domain name; your browser type and operating system; web pages you view; when you open certain emails we send; links you click; your IP address; your country of location; the length of time you visit our Sites and or use our Services; and the referring URL, or the webpage that led you to our Sites. We may combine this information with other information that we have collected about you, including, where applicable, your user name, name, and other personal information.
 
-**Basis for Use of Personal Information:**
+### Basis for Use of Personal Information
 
-**Purposes and Legitimate Interests**
+#### Purposes and Legitimate Interests
 
 Open Sats uses the personal information we collect for our legitimate non-proft and charitable business interests, which include the following purposes:
 
 - _Providing our Sites and Services_. To provide the Services and our Sites, to communicate with you about your use of our Sites and Services, to respond to your inquiries, provide support and maintenance of the Sites and for other purposes to support users and the community.
-- _Operating our Open-Source Projects_. To enable communication between and among open-source developers in the community; to facilitate and document Project governance and technical decision-making; to maintain, and make publicly available on a perpetual basis, records regarding intellectual property provenance and license compliance for Project contributions; and for related activities to further Open Sats&#39;s core purpose of fostering an ecosystem that supports the collaborative and public development of free and open-source software projects. See the "Project Integrity and Credit for Attribution" section above for more information.
+- _Operating our Open-Source Projects_. To enable communication between and among open-source developers in the community; to facilitate and document Project governance and technical decision-making; to maintain, and make publicly available on a perpetual basis, records regarding intellectual property provenance and license compliance for Project contributions; and for related activities to further Open Sats's core purpose of fostering an ecosystem that supports the collaborative and public development of free and open-source software projects. See the "Project Integrity and Credit for Attribution" section above for more information.
 - _Maintain our Training and Certification Programs_. To maintain records about who has attended or registered to attend educational or training programs.
 - _Event Administration_. To plan, organize, and facilitate access to events and related services and activities, and to carry out informative and safe events for participants, including attendees, speakers and sponsors. If you provide us information about disabilities, medical conditions and allergies, we will use this information in order to provide appropriate accommodations for attendees and to ensure their health and safety; we will not use this information for other purposes, unless required by law or as necessary to defend our legal rights. For in-person events requiring attendees to be vaccinated against COVID-19, we use information regarding your COVID-19 vaccination status to provide a safer environment for attendees and staff, in order to confirm vaccination status before permitting access to the event venue space.
 - _Personalization_. To tailor the content and information that we may send or display to you on our Sites and in our Services, to offer location customization and personalized help and instructions and to otherwise personalize your experiences.
@@ -77,7 +77,7 @@ Open Sats uses the personal information we collect for our legitimate non-proft 
 - _Business and Legal Operations_. As part of our general charitable and non-profit business and legal operations (e.g., accounting, record keeping, and for other business administration purposes), and as necessary to establish, exercise and defend (actual and potential) legal claims.
 - _Prevent Misuse_. Where we believe necessary to investigate, prevent or take action regarding illegal activities, suspected fraud, situations involving potential threats to the safety of any person or violations of the relevant Terms and Conditions or this Privacy Policy.
 
-**Sharing of Personal Information**
+#### Sharing of Personal Information
 
 We disclose personal information as set forth below, and where individuals have otherwise consented:
 
@@ -90,7 +90,7 @@ We disclose personal information as set forth below, and where individuals have 
 - _Protection of Rights._ We may disclose information where we believe it necessary to respond to claims asserted against us or, comply with legal process (e.g., subpoenas or warrants), enforce or administer our agreements and terms, for fraud prevention, risk assessment, investigation, and protect the rights, property or safety of Open Sats, its Users, participants in its events or Projects, or others.
 - _Anonymized and Aggregated Information._ We may share aggregated information with third parties for research, marketing, analytics and other purposes, provided such information does not identify a particular individual.
 
-**Cookies, Tracking, and Interest-Based Ads**
+#### Cookies, Tracking, and Interest-Based Ads
 
 We and our third-party providers use cookies, pixel tags, JavaScript, log files, and other mechanisms to automatically collect and record information about your usage and browsing activities on our Site and across third party sites or online services. We may combine this information with other information we collect about users. Below, we provide a brief summary these activities.
 
@@ -100,21 +100,21 @@ We and our third-party providers use cookies, pixel tags, JavaScript, log files,
 
 **Targeted Ads.** As discussed in our Cookie Policy, we may work with third-party advertisers to display more relevant ads on our website and on third party sites; these third parties may display ads to you based on your visit to our Sites and other third-party sites.
 
-**Data Security**
+#### Data Security
 
 We have implemented commercially reasonable precautions designed to protect the information we collect from loss, misuse, and unauthorized access, disclosure, alteration, and destruction. Please be aware that despite our best efforts, Open Sats provides no guarantee that any security measure will be completely and totally secure.
 
 We are not responsible for any lost, stolen, or compromised passwords or for any activity on your account via unauthorized password activity. We ask you to promptly notify us if you become aware that any information provided by or submitted to our Sites or through our Services is lost, stolen, or used without permission at [support@opensats.org].
 
-**Marketing Choices**
+#### Marketing Choices
 
-You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing [support@opensats.org]. You may also unsubscribe from mailing lists via the applicable mailing list&#39;s subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
+You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing [support@opensats.org]. You may also unsubscribe from mailing lists via the applicable mailing list's subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
 
-**Retention of Your Personal Information**
+#### Retention of Your Personal Information
 
 We generally keep personal information only for as long as required to fulfill the purposes for which it was collected. However, in some circumstances, we may retain personal information for other periods of time, for instance where we are required to do so in accordance with legal, tax and accounting requirements, or if required to do so by a legal process, legal authority, or other governmental entity having authority to make the request, for so long as required. In specific circumstances, we may also retain your personal information for longer periods of time corresponding to a statute of limitation, so that we have an accurate record of your dealings with us in the event of any complaints or challenges.
 
-**International Information:**
+### International Information:
 
 **Scope**. This section applies to individuals in the European Union "EU" (for these purposes, reference to the EU also includes the European Economic Area countries of Iceland, Liechtenstein and Norway and, to the extent applicable, Switzerland).
 
@@ -130,7 +130,7 @@ Open Sats is the data processor with respect to processing personal information 
 
 **Right to erasure** : You may ask us to delete or remove your personal data, such as where you withdraw your consent. If we shared your data with others, we will tell them about the erasure where possible. If you ask us, and where possible and lawful to do so, we will also tell you with whom we shared your Personal data with so you can contact them directly.
 
-**Right to restrict processing** : You may ask us to restrict or &#39;block&#39; the processing of your personal data in certain circumstances, such as where you contest the accuracy of the data or object to us processing it (please read below for information on your right to object). We will tell you before we lift any restriction on processing. If we shared your Personal data with others, we will tell them about the restriction where possible. If you ask us, and where possible and lawful to do so, we will also tell you with whom we shared your Personal data so you can contact them directly.
+**Right to restrict processing** : You may ask us to restrict or 'block' the processing of your personal data in certain circumstances, such as where you contest the accuracy of the data or object to us processing it (please read below for information on your right to object). We will tell you before we lift any restriction on processing. If we shared your Personal data with others, we will tell them about the restriction where possible. If you ask us, and where possible and lawful to do so, we will also tell you with whom we shared your Personal data so you can contact them directly.
 
 **Right to data portability** : You have the right to obtain your personal data from us that you consented to give us or that was provided to us as necessary in connection with our contract with you, and that is processed by automated means. We will give you your personal data in a structured, commonly used and machine-readable format. You may reuse it elsewhere.
 
@@ -166,19 +166,19 @@ Attention: Information Security
 
 We will respond to such inquiries or complaints within thirty (30) days.
 
-**Children&#39;s Privacy**
+### Children's Privacy
 
-Open Sats does not knowingly collect or solicit personal information from anyone under the age of sixteen (16), or knowingly allow such persons to register. If we become aware that we have collected personal information from a child under the relevant age without parental consent, we take steps to delete that information. Where we specifically indicate that we collect personal information from children under sixteen (16), we will obtain the parent or guardian&#39;s consent and provide adequate notice.
+Open Sats does not knowingly collect or solicit personal information from anyone under the age of sixteen (16), or knowingly allow such persons to register. If we become aware that we have collected personal information from a child under the relevant age without parental consent, we take steps to delete that information. Where we specifically indicate that we collect personal information from children under sixteen (16), we will obtain the parent or guardian's consent and provide adequate notice.
 
-**Links to Third Party Sites and Services**
+### Links to Third Party Sites and Services
 
 The Sites may contain links to third party sites or online services. Please refer to the privacy policies of the relevant third-party websites or services to find out more about how they process and handle personal information.
 
-**California Privacy Rights**
+### California Privacy Rights
 
 Only to the extent that Open Sats meets the minimum thresholds as required under California law to be subject to the California Privacy Rights Act of 2020, residents of California will be able to request and obtain from us once a year, free of charge, a list of the third parties to whom we have disclosed their personal information (if any) for their direct marketing purposes in the prior calendar year, as well as the types of personal information disclosed to those parties. If you are a California resident and would like to request this information, please submit your request in an email to [support@opensats.org]. We reserve the right to ask for verification of your California residence and deny this request if Open Sats believes it is not subject to this requirement.
 
-**Contact Us**
+### Contact Us
 
 If you have any questions about our practices or this Privacy Policy, please contact us at [support@opensats.org], or write to us at:
 
@@ -192,6 +192,6 @@ This Policy is current as of the effective date set forth above. If we change ou
 
 ---
 
-**Last Updated: May 2, 2023**
+Last Updated: May 2, 2023
 
 [support@opensats.org]: mailto:support@opensats.org
