--- a/data/pages/privacy.mdx
+++ b/data/pages/privacy.mdx
@@ -160,9 +160,8 @@ Please see the section below with our contact information on how to reach Open S
 
 **Recourse, Enforcement, Liability**. Open Sats commits to resolve complaints about our processing of your personal data. European Union, United Kingdom, and Swiss users with inquiries or complaints regarding our processing of Personal data should first contact Open Sats as follows:
 
-Email: [support@opensats.org]
-
-Attention: Information Security
+- **Email:** [support@opensats.org]
+- **Subject:** Attention: Information Security
 
 We will respond to such inquiries or complaints within thirty (30) days.
 
