Use PageLayout to render terms

--- a/data/pages/terms.mdx
+++ b/data/pages/terms.mdx
@@ -1,6 +1,9 @@
-# Open Sats Initiative terms of use
-
-**Last updated: May 2, 2023**
+---
+title: Terms of Use
+summary: "OpenSats Initiative Terms of Use"
+image: /static/images/avatar.png
+layout: PageLayout
+---
 
 Welcome to the Opensats.org website and/or mobile application (individually and collectively, the &quot;Site&quot;). Your access and use of the Site and of features, software, products and services provided by Open Sats Initiative (&quot;Open Sats,&quot; &quot;we,&quot; &quot;us,&quot; or &quot;our&quot;) through the Site, (individually and collectively, the &quot;Service&quot;) is subject to the terms and conditions in this Terms of Use (&quot;Terms of Use&quot; or &quot;Terms&quot;).
 
@@ -89,3 +92,7 @@ Some Content in our Site may be acquired from sources that prohibit further use 
     Austin, TX 78741  
 
     [support@opensats.org](mailto:support@opensats.org)
+
+---
+
+**Last updated: May 2, 2023**
