--- a/data/pages/terms.mdx
+++ b/data/pages/terms.mdx
@@ -5,7 +5,7 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Welcome to the Opensats.org website and/or mobile application (individually and collectively, the "Site"). Your access and use of the Site and of features, software, products and services provided by Open Sats Initiative ("Open Sats," "we," "us," or "our") through the Site, (individually and collectively, the "Service") is subject to the terms and conditions in this Terms of Use ("Terms of Use" or "Terms").
+Welcome to the Opensats.org website and/or mobile application (individually and collectively, the "Site"). Your access and use of the Site and of features, software, products and services provided by Open Sats Initiative ("Open Sats," "OpenSats," "we," "us," or "our") through the Site, (individually and collectively, the "Service") is subject to the terms and conditions in this Terms of Use ("Terms of Use" or "Terms").
 
 You must agree to the Terms in order to use the Site and/or the Service. If you use the Site and/or the Service, or click to accept or agree to the Terms if presented to you in a user interface for the Service, this is your acceptance of the Terms and your agreement to all of its terms and conditions. By accepting the Terms or using the Site and/or the Service, you represent and warrant that you are at least 18 years of age and have the legal capacity to enter a contract in the jurisdiction where you reside. If you do not accept the Terms, then you may not use the Site or the Service. If you are using the Site or the Service on behalf of another entity, you represent and warrant that you have full legal authority to bind such other entity to the Terms. If you do not have such authority, then you may not use the Site or the Service and you must discontinue all use of the Site and the Service immediately.
 
