No explicit email links (done automatically)

--- a/data/pages/privacy.mdx
+++ b/data/pages/privacy.mdx
@@ -104,11 +104,11 @@ We and our third-party providers use cookies, pixel tags, JavaScript, log files,
 
 We have implemented commercially reasonable precautions designed to protect the information we collect from loss, misuse, and unauthorized access, disclosure, alteration, and destruction. Please be aware that despite our best efforts, Open Sats provides no guarantee that any security measure will be completely and totally secure.
 
-We are not responsible for any lost, stolen, or compromised passwords or for any activity on your account via unauthorized password activity. We ask you to promptly notify us if you become aware that any information provided by or submitted to our Sites or through our Services is lost, stolen, or used without permission at [support@opensats.org].
+We are not responsible for any lost, stolen, or compromised passwords or for any activity on your account via unauthorized password activity. We ask you to promptly notify us if you become aware that any information provided by or submitted to our Sites or through our Services is lost, stolen, or used without permission at support@opensats.org.
 
 #### Marketing Choices
 
-You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing [support@opensats.org]. You may also unsubscribe from mailing lists via the applicable mailing list's subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
+You may opt out of or withdraw your consent to receive direct marketing emails from us by using the unsubscribe or opt out mechanisms included in our marketing emails or by emailing support@opensats.org. You may also unsubscribe from mailing lists via the applicable mailing list's subscription website or, in some cases, by using the unsubscribe mechanisms included in such emails.
 
 #### Retention of Your Personal Information
 
@@ -160,7 +160,7 @@ Please see the section below with our contact information on how to reach Open S
 
 **Recourse, Enforcement, Liability**. Open Sats commits to resolve complaints about our processing of your personal data. European Union, United Kingdom, and Swiss users with inquiries or complaints regarding our processing of Personal data should first contact Open Sats as follows:
 
-- **Email:** [support@opensats.org]
+- **Email:** support@opensats.org
 - **Subject:** Attention: Information Security
 
 We will respond to such inquiries or complaints within thirty (30) days.
@@ -175,11 +175,11 @@ The Sites may contain links to third party sites or online services. Please refe
 
 ### California Privacy Rights
 
-Only to the extent that Open Sats meets the minimum thresholds as required under California law to be subject to the California Privacy Rights Act of 2020, residents of California will be able to request and obtain from us once a year, free of charge, a list of the third parties to whom we have disclosed their personal information (if any) for their direct marketing purposes in the prior calendar year, as well as the types of personal information disclosed to those parties. If you are a California resident and would like to request this information, please submit your request in an email to [support@opensats.org]. We reserve the right to ask for verification of your California residence and deny this request if Open Sats believes it is not subject to this requirement.
+Only to the extent that Open Sats meets the minimum thresholds as required under California law to be subject to the California Privacy Rights Act of 2020, residents of California will be able to request and obtain from us once a year, free of charge, a list of the third parties to whom we have disclosed their personal information (if any) for their direct marketing purposes in the prior calendar year, as well as the types of personal information disclosed to those parties. If you are a California resident and would like to request this information, please submit your request in an email to support@opensats.org. We reserve the right to ask for verification of your California residence and deny this request if Open Sats believes it is not subject to this requirement.
 
 ### Contact Us
 
-If you have any questions about our practices or this Privacy Policy, please contact us at [support@opensats.org], or write to us at:
+If you have any questions about our practices or this Privacy Policy, please contact us at support@opensats.org, or write to us at:
 
     Open Sats Initiative, Inc.  
     2028 East Ben White Blvd, Suite 240-6969  
@@ -192,5 +192,3 @@ This Policy is current as of the effective date set forth above. If we change ou
 ---
 
 Last Updated: June 7, 2023
-
-[support@opensats.org]: mailto:support@opensats.org
