--- a/data/pages/terms.mdx
+++ b/data/pages/terms.mdx
@@ -91,8 +91,8 @@ Some Content in our Site may be acquired from sources that prohibit further use 
     2028 East Ben White Blvd, Suite 240-6969  
     Austin, TX 78741  
 
-    [support@opensats.org](mailto:support@opensats.org)
+    support@opensats.org
 
 ---
 
-**Last updated: May 2, 2023**
+**Last updated: June 7, 2023**
