Add missing period.

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -69,7 +69,7 @@ align with the mission of our charity to be eligible for donations.
 
 Any project that is free and open-source and is aligned with the OpenSats
 mission are free to [submit an application](/apply) for their
-project to be listed on the [OpenSats website](/projects)
+project to be listed on the [OpenSats website](/projects).
 
 All applications which fulfill the criteria will be evaluated by the Board. Upon
 board approval and collection of necessary supplemental data, approved projects
