Fix FAQ sub-heading

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -56,6 +56,10 @@ farther.
 
 ## How can I communicate with you?
 
+
+
+## How often are funding opportunities announced?
+
 Funding opportunities are announced once per year, depending on funding
 availability. Projects that align with our mission statement are encouraged to
 apply. Board members evaluate each application based on technical merit,
