Add 'How can I communicate with you?' section

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -56,7 +56,15 @@ farther.
 
 ## How can I communicate with you?
 
+The best way to communicate with us is via email: 
 
+- support@opensats.org
+
+You can also write to us at:
+
+    Open Sats Initiative, Inc.  
+    2028 East Ben White Blvd, Suite 240-6969  
+    Austin, TX 78741  
 
 ## How often are funding opportunities announced?
 
