--- a/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
+++ b/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Long-Term Support Program for Bitcoin Core Developers"
 date: '2023-06-12'
-tags: ['OpenSats', 'grants', 'bitcoin']
+tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['dergigi']
 summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people"
