--- a/data/authors/dread.mdx
+++ b/data/authors/dread.mdx
@@ -33,12 +33,12 @@ global awareness, he switched his attention and energy to developing and
 promoting Bitcoin.
 
 He has written several travel articles for Bitcoin Magazine, writing tips on
-where to go and what to do when nomadic Bitcoiners are travelling to various
-cities around the world. He also does his own personal gobetrotting, visiting
+where to go and what to do when nomadic Bitcoiners are traveling to various
+cities around the world. He also does his own personal globetrotting, visiting
 new and budding bitcoin communities in many parts of the world, volunteering his
 time and knowledge to help grow the Bitcoin circular economy.
 
-Dread also contributes to several open source projects in the Bitcoin space,
+Dread also contributes to several open-source projects in the Bitcoin space,
 focusing on applications and services that allow anyone to run open source
 software on their own self-hosted server. He was involved in the creation and
 growth of [Plebnet], a free and open online lightning community focused on helping
