--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -7,33 +7,34 @@ layout: PageLayout
 
 OpenSats is a 501(c)(3) public charity that aims to support and maintain a
 sustainable ecosystem of funding for free and open-source projects and
-contributors, especially Bitcoin related projects and projects which help
-Bitcoin flourish.
+contributors, especially bitcoin-related projects and projects that help bitcoin
+flourish.
 
 We believe that free and open-source software is essential to the future of the
 internet and the world. It allows people to collaborate and share knowledge,
-without being locked into proprietary software or hardware. This is especially
-important for Bitcoin, which is a decentralized currency that relies on the
+without being locked into proprietary software or hardware. This is particularly
+important for bitcoin, which is a sound and digital money that relies on the
 open-source development community to maintain and improve its software.
 
-OpenSats provides funding for a variety of Bitcoin-related projects, including:
+OpenSats provides funding for a variety of bitcoin-related projects, including:
 
-- Development of new Bitcoin & Bitcoin-adjacent software
+- Development of new bitcoin & bitcoin-adjacent software
 - Improvement of existing free and open-source software
-- Education and outreach about Bitcoin 
-- Research into Bitcoin-related topics
+- Education and outreach about bitcoin
+- Research into bitcoin-related topics
 
-We believe that by supporting these projects, we can help to make Bitcoin more
-accessible, secure, and decentralized. We also believe that these projects have
-the potential to revolutionize the way we think about money and finance.
+We believe that by supporting these projects, we can help make bitcoin more
+accessible, robust, secure, and decentralized. We also believe that these
+projects have the potential to revolutionize the way we think about individual
+sovereignty and liberty.
 
 OpenSats is committed to transparency and accountability. We publish our
 financial statements and board meeting minutes online. We also have a rigorous
 review process for all projects that we fund.
 
-We believe that OpenSats can play a vital role in the future of Bitcoin. We are
+We believe that OpenSats can play a vital role in the future of bitcoin. We are
 committed to supporting the development of free and open-source software, and we
-believe that Bitcoin has the potential to change the world.
+believe that bitcoin has the potential to change the world.
 
 ### How You Can Help
 
