--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -40,8 +40,12 @@ believe that bitcoin has the potential to change the world.
 
 There are many ways that you can help OpenSats achieve its mission. You can:
 
-- Donate to OpenSats
-- Volunteer your time to OpenSats
-- Spread the word about OpenSats
+- [Donate] to OpenSats
+- [Volunteer] your time to OpenSats
+- [Spread the word] about OpenSats
 
 Every little bit helps. Thank you for your support!
+
+[Donate]: /projects/opensats_operations_budget
+[Volunteer]: mailto:volunteer@opensats.org
+[Spread the word]: http://nostr.com/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
